2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_scrollbar_stepper):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_scrollbar_stepper):
	Speed improvement in buttons and scrollbar steppers rendering.
	Maybe unnoticeable but there is ;)

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Better code

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_shadow),
	(murrine_style_draw_box_gap), (murrine_style_draw_box):
	Better code

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_shadow),
	(murrine_style_draw_box):
	Fix the check to also fill the background if the widget is NULL.

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_entry),
	(murrine_draw_progressbar_trough):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_entry),
	(murrine_rgba_draw_progressbar_trough):
	* src/murrine_style.c (murrine_style_draw_shadow),
	(murrine_style_draw_box):
	Add support for the "transparent-bg-hint" for entries and progressbars.

2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_shadow):
	Removes unnecessary MurrineRGB cast to fix build on solaris.
	(Bug #535456 of gtk-engines, patch by Damien Carbery)

2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_list_view_header):
	* src/murrine_style.c (murrine_style_draw_box):
	* src/murrine_types.h:
	Change the header button position enum to be a bitfield.
	(Bug #511958 of gtk-engines, Marcus Brinkmann)

2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_highlight_and_shade),
	(murrine_draw_frame):
	* src/murrine_draw_rgba.c (murrine_draw_highlight_and_shade),
	(murrine_rgba_draw_frame):
	Fixes bugs with rounded shadows
